tests/frontend/fail/array/out_of_bounds_nested.act
contract B

constructor()

creates

  uint[2][3][5] x := [ [ [ 0,0 ], [ 0,0 ], [ 0,0 ] ],
                       [ [ 0,0 ], [ 0,0 ], [ 0,0 ] ],
                       [ [ 0,0 ], [ 0,0 ], [ 0,0 ] ],
                       [ [ 0,0 ], [ 0,0 ], [ 0,0 ] ],
                       [ [ 0,0 ], [ 0,0 ], [ 0,0 ] ] ]

transition f()



storage

  x[1][2][4] := 4
